Cleanup & Spellcheck additions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,14 @@
 {
    "cSpell.words": [
       "Jasskia",
+      "cilanthia",
       "elven",
+      "garumna",
+      "jass",
       "jasskia's",
       "kineticist",
       "shuriken",
+      "viridia",
       "vishkanya",
       "waterskin"
    ]
