--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
       "jasskia's",
       "kineticist",
       "shuriken",
+      "spellcraft",
       "viridia",
       "vishkanya",
       "waterskin"
