Adjusting timing of events

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,15 @@
 {
    "cSpell.words": [
       "Jasskia",
+      "aetherial",
       "cilanthia",
+      "counterspell",
       "elven",
       "garumna",
       "jass",
       "jasskia's",
       "kineticist",
+      "nonspell",
       "shuriken",
       "spellcraft",
       "viridia",
