Added short description

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
    "cSpell.words": [
       "Jasskia",
       "aetherial",
+      "bla'kroya",
       "cilanthia",
       "counterspell",
       "elven",
