Formatting for smaller screen, PC/NPC notes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,15 +6,23 @@
       "cilanthia",
       "counterspell",
       "elven",
+      "fabricus",
       "garumna",
+      "garumna's",
+      "guildmaster",
       "jass",
       "jasskia's",
       "kineticist",
       "nonspell",
+      "pyra",
+      "pyraloid",
+      "ratfolk",
       "shuriken",
+      "skeevy",
       "spellcraft",
       "viridia",
       "vishkanya",
-      "waterskin"
+      "waterskin",
+      "wetwork"
    ]
 }
