Post-First-Session

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,26 +3,33 @@
       "Jasskia",
       "aetherial",
       "bla'kroya",
+      "braveheart",
+      "casmar",
       "cilanthia",
       "counterspell",
+      "duergar",
       "elven",
       "fabricus",
       "garumna",
       "garumna's",
       "guildmaster",
+      "halfling",
       "jass",
       "jasskia's",
       "kineticist",
       "nonspell",
       "pyra",
+      "pyra's",
       "pyraloid",
       "ratfolk",
+      "seldana",
       "shuriken",
       "skeevy",
       "spellcraft",
       "viridia",
       "vishkanya",
       "waterskin",
-      "wetwork"
+      "wetwork",
+      "xulri"
    ]
 }
