Added templates, slight modifications to journal.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
       "bla'kroya",
       "braveheart",
       "casmar",
+      "charname",
+      "charname's",
       "cilanthia",
       "counterspell",
       "duergar",
