Minor character description typo fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
       "garumna",
       "garumna's",
       "guildmaster",
+      "halfing",
       "halfling",
       "jass",
       "jasskia's",
