--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
       "casmar",
       "charname",
       "charname's",
+      "cil's",
       "cilanthia",
       "counterspell",
       "duergar",
@@ -17,6 +18,7 @@
       "guildmaster",
       "halfing",
       "halfling",
+      "hitpoints",
       "jass",
       "jasskia's",
       "kineticist",
