--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
       "casmar",
       "charname",
       "charname's",
+      "chirurgery",
       "cil's",
       "cilanthia",
       "counterspell",
@@ -22,6 +23,7 @@
       "jass",
       "jasskia's",
       "kineticist",
+      "kineticists",
       "nonspell",
       "pyra",
       "pyra's",
