--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,10 @@
    "cSpell.words": [
       "Jasskia",
       "aetherial",
+      "amelie",
       "bla'kroya",
       "braveheart",
+      "cas's",
       "casmar",
       "charname",
       "charname's",
