Post-session-3 Commit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
    "cSpell.words": [
       "Jasskia",
+      "Mithril",
       "aetherial",
       "amelie",
       "bla'kroya",
@@ -14,6 +15,7 @@
       "cilanthia",
       "counterspell",
       "duergar",
+      "duergar's",
       "elven",
       "fabricus",
       "garumna",
@@ -21,6 +23,7 @@
       "guildmaster",
       "halfing",
       "halfling",
+      "hidey",
       "hitpoints",
       "jass",
       "jasskia's",
