Planning in the works

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,7 @@
       "ratfolk",
       "seldana",
       "shuriken",
+      "sidequests",
       "skeevy",
       "spellcraft",
       "viridia",
