--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
    "cSpell.words": [
+      "Elementalist",
       "Jasskia",
       "Mithril",
       "aetherial",
@@ -14,8 +15,10 @@
       "cil's",
       "cilanthia",
       "counterspell",
+      "darkvision",
       "duergar",
       "duergar's",
+      "dwarvish",
       "elven",
       "fabricus",
       "garumna",
@@ -30,17 +33,21 @@
       "kineticist",
       "kineticists",
       "nonspell",
+      "o'shaqspear",
       "pyra",
       "pyra's",
       "pyraloid",
       "ratfolk",
+      "sahuagin",
       "seldana",
       "shuriken",
       "sidequests",
       "skeevy",
+      "spellcasting",
       "spellcraft",
       "viridia",
       "vishkanya",
+      "viskiks",
       "waterskin",
       "wetwork",
       "xulri"
