Jass Witch Build

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,12 +37,14 @@
       "pyra",
       "pyra's",
       "pyraloid",
+      "racials",
       "ratfolk",
       "sahuagin",
       "seldana",
       "shuriken",
       "sidequests",
       "skeevy",
+      "spellbook",
       "spellcasting",
       "spellcraft",
       "viridia",
@@ -50,6 +52,10 @@
       "viskiks",
       "waterskin",
       "wetwork",
+      "wordcaster",
+      "wordspell",
+      "wordspell's",
+      "wordspell’s",
       "xulri"
    ]
 }
