--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,61 +1,63 @@
 {
    "cSpell.words": [
-      "Elementalist",
-      "Jasskia",
-      "Mithril",
-      "aetherial",
-      "amelie",
-      "bla'kroya",
-      "braveheart",
-      "cas's",
-      "casmar",
-      "charname",
-      "charname's",
-      "chirurgery",
-      "cil's",
-      "cilanthia",
-      "counterspell",
-      "darkvision",
-      "duergar",
-      "duergar's",
-      "dwarvish",
-      "elven",
-      "fabricus",
-      "garumna",
-      "garumna's",
-      "guildmaster",
-      "halfing",
-      "halfling",
-      "hidey",
-      "hitpoints",
-      "jass",
-      "jasskia's",
-      "kineticist",
-      "kineticists",
-      "nonspell",
-      "o'shaqspear",
-      "pyra",
-      "pyra's",
-      "pyraloid",
-      "racials",
-      "ratfolk",
-      "sahuagin",
-      "seldana",
-      "shuriken",
-      "sidequests",
-      "skeevy",
-      "spellbook",
-      "spellcasting",
-      "spellcraft",
-      "viridia",
-      "vishkanya",
-      "viskiks",
-      "waterskin",
-      "wetwork",
-      "wordcaster",
-      "wordspell",
-      "wordspell's",
-      "wordspell’s",
-      "xulri"
-   ]
+		"Elementalist",
+		"Jasskia",
+		"Mithril",
+		"aetherial",
+		"amelie",
+		"bla'kroya",
+		"braveheart",
+		"cas's",
+		"casmar",
+		"charname",
+		"charname's",
+		"chirurgery",
+		"cil's",
+		"cilanthia",
+		"counterspell",
+		"darkvision",
+		"duergar",
+		"duergar's",
+		"dwarvish",
+		"elven",
+		"fabricus",
+		"garumna",
+		"garumna's",
+		"guildmaster",
+		"halfing",
+		"halfling",
+		"hidey",
+		"hitpoints",
+		"jass",
+		"jasskia's",
+		"kineticist",
+		"kineticists",
+		"nonspell",
+		"o'shaqspear",
+		"pyra",
+		"pyra's",
+		"pyraloid",
+		"racials",
+		"ratfolk",
+		"sahuagin",
+		"seldana",
+		"shuriken",
+		"sidequests",
+		"skeevy",
+		"spellbook",
+		"spellcasting",
+		"spellcraft",
+		"verci",
+		"verci's",
+		"viridia",
+		"vishkanya",
+		"viskiks",
+		"waterskin",
+		"wetwork",
+		"wordcaster",
+		"wordspell",
+		"wordspell's",
+		"wordspell’s",
+		"xulri"
+	]
 }
