Vessel in-progress

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
    "cSpell.words": [
+		"Aasimar",
 		"Elementalist",
 		"Jasskia",
 		"Mithril",
@@ -32,8 +33,10 @@
 		"jasskia's",
 		"kineticist",
 		"kineticists",
+		"longswords",
 		"nonspell",
 		"o'shaqspear",
+		"orcish",
 		"pyra",
 		"pyra's",
 		"pyraloid",
@@ -57,7 +60,6 @@
 		"wordcaster",
 		"wordspell",
 		"wordspell's",
-		"wordspell’s",
 		"xulri"
 	]
 }
