--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,7 +33,10 @@
 		"jasskia's",
 		"kineticist",
 		"kineticists",
+		"longsword",
 		"longswords",
+		"namah",
+		"namah's",
 		"nonspell",
 		"o'shaqspear",
 		"orcish",
