--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,14 @@
 		"Elementalist",
 		"Jasskia",
 		"Mithril",
+		"aasimars",
 		"aetherial",
 		"amelie",
 		"bla'kroya",
 		"braveheart",
 		"cas's",
 		"casmar",
+		"channeler",
 		"charname",
 		"charname's",
 		"chirurgery",
@@ -22,6 +24,7 @@
 		"dwarvish",
 		"elven",
 		"fabricus",
+		"featherfall",
 		"garumna",
 		"garumna's",
 		"guildmaster",
