--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
 		"Jasskia",
 		"Mithril",
 		"aasimars",
+		"adrena",
+		"adrena's",
 		"aetherial",
 		"amelie",
 		"bla'kroya",
@@ -20,6 +22,7 @@
 		"cilanthia",
 		"counterspell",
 		"darkvision",
+		"darkwood",
 		"duergar",
 		"duergar's",
 		"dwarvish",
@@ -44,6 +47,7 @@
 		"nonspell",
 		"o'shaqspear",
 		"orcish",
+		"polypurpose",
 		"pyra",
 		"pyra's",
 		"pyraloid",
@@ -66,6 +70,7 @@
 		"viskiks",
 		"waterskin",
 		"wetwork",
+		"wildepath",
 		"wordcaster",
 		"wordspell",
 		"wordspell's",
