Pandora lcp playtest

--- a/homebrew/Lancer/Kalopsia/lcp/lcp_manifest.json
+++ b/homebrew/Lancer/Kalopsia/lcp/lcp_manifest.json
@@ -1,7 +1,7 @@
 {
-   "name": "TODO",
-   "author": "TODO",
-   "description": "TODO",
-   "item_prefix": "TODO",
+   "name": "Kalopsia Beta",
+   "author": "Talia Mallo",
+   "description": "Beta testing for Kalopsia mechs",
+   "item_prefix": "kalopsia",
    "version": "0.0.1"
 }
